# civitai-comfy-nodes

./: .comfyignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml  sync-spec.yml
civitai_comfy_nodes/: __init__.py  base.py  catalog.py  client.py  comfy_compat.py  config.py  conversions.py  errors.py  local_models.py  model_cache.py  node_registry.py  nodes_manual.py  oauth.py  offload.py  prompt_context.py  server_routes.py  trace_tail.py
codegen/: emit.py  generate.py  ir.py  overrides.json
docs/superpowers/plans/: 2026-06-22-offload-nonblocking-trace.md
docs/superpowers/specs/: 2026-06-22-offload-nonblocking-trace-design.md
example_workflows/: anima_offload_invert_local.json  civitai_image_gen.json  civitai_offload_marker_region.json  civitai_text_to_image.json
scripts/: sync-spec.sh  test-oauth.py
spec/: v2-consumers.json
tests/: conftest.py  test_catalog.py  test_client.py  test_config.py  test_conversions.py  test_e2e.py  test_emit_golden.py  test_import_smoke.py  test_ir.py  test_loaders.py  test_local_loader.py  test_logging.py  test_model_cache.py  test_node_registry.py  test_oauth.py  test_offload.py  test_polling.py  test_server_routes.py  test_trace_tail.py  test_validation.py
tests/golden/: CivitaiEcho.py.golden  CivitaiImageGenComfySd1CreateImage.py.golden  CivitaiImageGenFlux1Kontext.py.golden  CivitaiImageUpscaler.py.golden  CivitaiTextToImage.py.golden  CivitaiVideoGenWan.py.golden
web/: civitai-buzz.js  civitai-catalog.js  civitai-gallery.js  civitai-offload.js  civitai-selector.js  civitai-settings.js  civitai-status.js
